[tool.poetry]
name = "which-app-is-activating-on-a-mac"
version = "0.1.0"
description = "See README"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyobjc = "^10.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
